--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,10 @@
 body {
   -webkit-print-color-adjust: exact !important;
   print-color-adjust: exact !important;
+  min-width: 320px;
+  overflow-x: hidden;
 }
 
-h1,
-h2 {
+.font-heading {
   font-family: 'Paytone One', sans-serif;
 }
