--- a/src/parts/navigator.ejs
+++ b/src/parts/navigator.ejs
@@ -2,6 +2,7 @@
 active: true }, { name: 'CV', link: '/cv.html'}, { name: 'Contact', link:
 'mailto:hi@haova.me'} ]; _%>
 <div
+  id="top"
   class="flex before:block before:bg-white before:flex-1 after:block after:bg-gray-50 after:flex-1 mb-4"
 >
   <div class="max-w-3xl w-full mx-auto flex items-center justify-between">
