--- a/src/parts/footer.ejs
+++ b/src/parts/footer.ejs
@@ -1,4 +1,13 @@
 <div class="text-xs md:text-sm bg-gray-50 py-4 px-8 text-center mt-8">
   Copyright &copy; 2021-2023 by HaoVA
 </div>
+<a
+  href="#top"
+  class="rounded-full border border-black w-8 h-8 flex items-center justify-center fixed bottom-2 right-6"
+>
+  <img
+    class="w-4 h-4"
+    src="/icons/chevron-up-sharp.svg"
+  />
+</a>
 <%= htmlWebpackPlugin.tags.bodyTags %>
