Update meta tags

--- a/src/blog.ejs
+++ b/src/blog.ejs
@@ -4,6 +4,16 @@
   <head>
     <title>HaoVA - Blog</title>
 
+    <meta property="og:title" content="HaoVA - Blog">
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="/images/haova-logo-square-black-small.png">
+    <meta property="og:url" content="https://www.haova.me/blog">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <meta property="og:description" content="A simple blog of HaoVA - Vũ Anh Hào">
+    <meta property="og:site_name" content="HaoVA - Blog">
+    <meta name="twitter:image:alt" content="HaoVA - Blog">
+
     <%- await include('./parts/header.ejs') %>
   </head>
 
