--- a/src/parts/navigator.ejs
+++ b/src/parts/navigator.ejs
@@ -7,11 +7,13 @@ active: true }, { name: 'CV', link: '/cv.html'}, { name: 'Contact', link:
 >
   <div class="max-w-3xl w-full mx-auto flex items-center justify-between">
     <div class="px-4 py-4 md:py-2">
-      <img
-        src="/images/haova-logo-square-black-small.png"
-        alt="HaoVA's logo"
-        class="w-10 h-10 md:w-12 md:h-12"
-      />
+      <a href="/">
+        <img
+          src="/images/haova-logo-square-black-small.png"
+          alt="HaoVA's logo"
+          class="w-10 h-10 md:w-12 md:h-12"
+        />
+      </a>
     </div>
 
     <div class="flex uppercase text-sm bg-gray-50 pr-4 h-full items-center">
