--- a/src/post.ejs
+++ b/src/post.ejs
@@ -1,5 +1,5 @@
 <% 
-  const post = (await table('posts').find({ filters: { slug: params.slug } })).data[0];
+  const post = (await table('posts').find({ filters: { slug: params.slug, published: true }, sort: { createdAt: -1 } })).data[0];
   if (post) { 
 _%>
 <!DOCTYPE html>
@@ -23,7 +23,7 @@ _%>
   <body class="font-sans select-none">
     <%- await include('./parts/navigator.ejs') %>
 
-    <div class="p-4 max-w-3xl mx-auto">
+    <div class="p-4 max-w-3xl mx-auto min-h-screen">
       <h1
         class="text-center text-xl leading-8 font-semibold bg-white md:text-2xl md:leading-9"
       >
@@ -34,13 +34,6 @@ _%>
       >
         <%= moment(post.createdAt).format('YYYY.MM.DD') %>
       </div>
-      <!--div class="flex bg-gray-50 overflow-hidden items-center">
-        <img
-          src="<%= post.image %>"
-          class="w-12 h-12 object-cover flex-none"
-        />
-        <div class="text-xs px-2 max-h-12"><%= post.desc %></div>
-      </div-->
       <div class="content"><%- post.content %></div>
     </div>
 
