--- a/src/blog.ejs
+++ b/src/blog.ejs
@@ -1,4 +1,4 @@
-<% const posts = (await table('posts').find({})).data; _%>
+<% const posts = (await table('posts').find({ filters: { published: true }, sort: { createdAt: -1 } })).data; _%>
 <!DOCTYPE html>
 <html lang="en">
   <head>
