--- a/src/parts/navigator.ejs
+++ b/src/parts/navigator.ejs
@@ -1,9 +1,8 @@
-<% const navs = [ { name: 'Home', link: '/' }, { name: 'Blog', link: '/blog',
-active: true }, { name: 'CV', link: '/cv.html'}, { name: 'Contact', link:
+<% const navs = [ { name: 'Home', link: '/' }, { name: 'Blog', link: '/blog' }, { name: 'CV', link: '/cv.html'}, { name: 'Contact', link:
 'mailto:hi@haova.me'} ]; _%>
 <div
   id="top"
-  class="flex before:block before:bg-white before:flex-1 after:block after:bg-gray-50 after:flex-1 mb-4"
+  class="flex before:block before:bg-white before:flex-1 after:block after:bg-gray-50 after:flex-1 mb-4 print:hidden"
 >
   <div class="max-w-3xl w-full mx-auto flex items-center justify-between">
     <div class="px-4 py-4 md:py-2">
@@ -20,7 +19,7 @@ active: true }, { name: 'CV', link: '/cv.html'}, { name: 'Contact', link:
       <% for (const item of navs) { %>
       <a
         href="<%= item.link %>"
-        class="ml-4 md:ml-8 block cursor-pointer <%= item.active ? 'font-semibold' : 'text-gray-600' %>"
+        class="ml-4 md:ml-8 block cursor-pointer <%= item.active || current === item.name ? 'font-semibold' : 'text-gray-600' %>"
         ><%= item.name %></a
       >
       <% } %>
