--- a/src/post.ejs
+++ b/src/post.ejs
@@ -21,7 +21,7 @@ _%>
   </head>
 
   <body class="font-sans select-none">
-    <%- await include('./parts/navigator.ejs') %>
+    <%- await include('./parts/navigator.ejs', { current: 'Blog' }) %>
 
     <div class="p-4 max-w-3xl mx-auto min-h-screen">
       <h1
