--- a/src/cv.ejs
+++ b/src/cv.ejs
@@ -297,7 +297,7 @@ _%>
           >
             <div class="rounded-full overflow-hidden bg-white p-4 z-10">
               <img
-                src="/images/haova-photo.png"
+                src="/images/haova-photo-2.png"
                 class="rounded-full bg-gray-300"
               />
             </div>
