complete blog template

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -35,5 +35,7 @@
   </head>
   <body class="font-sans text-black bg-white dark:text-white dark:bg-black w-full h-full">
     {{ block "main" . }}{{ end }}
+
+    <script src="/theme.js"></script>
   </body>
 </html>
