--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,7 @@
 {{ define "main" }}
 <div class="w-full h-full relative flex flex-col items-center justify-center lg:text-xl">
   <div class="flex flex-col items-center justify-center md:flex-row md:items-end">
-    <h1 class="relative text-7xl lg:text-8xl font-black haova">
-      H<span class="text-transparent logo theme-toggle">a</span>oVA
-    </h1>
+    <h1 class="text-7xl lg:text-8xl">{{ partial "logo.html" . }}</h1>
     <div
       class="text-2xl mt-4 md:ml-4 md:mb-1.5 md:w-[320px] lg:text-4xl lg:mb-2 lg:ml-12 lg:w-[480px] text-center"
     >
@@ -13,15 +11,14 @@
   </div>
 
   <div class="mt-16 font-bold md:w-full text-center">
-    {{ range .Site.Menus.main }}
+    {{ range .Site.Menus.main }} {{ if not (eq .URL "/")}}
     <a
       href="{{ .URL }}"
       class="before:content-['#'] before:mx-1 inline-block mx-2 lg:mx-4 relative after:block after:w-[calc(100%-1em)] after:h-[1em] after:bg-primary after:absolute after:bottom-0 after:z-[-1] after:left-[1em] dark:after:hidden dark:text-primary"
       >{{ .Name | safeHTML }}</a
     >
-    {{ end }}
+    {{ end }} {{ end }}
   </div>
 </div>
-<script src="/theme.js"></script>
 
 {{ end }}
