--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,7 +2,9 @@
 
 <div class="max-w-3xl mx-auto p-4 min-h-[calc(100%-6.5rem)] md:min-h-[calc(100%-8rem)] md:text-lg">
   {{ range .Pages.ByPublishDate.Reverse }}
-  <div class="border-b first:border-t py-4 flex flex-col md:flex-row-reverse justify-center">
+  <div
+    class="border-b first:border-t dark:border-stone-700 py-4 flex flex-col md:flex-row-reverse justify-center"
+  >
     {{ $image := .Resources.Get .Params.image }} {{ if $image }}
     <a href="{{ .RelPermalink }}" class="block shrink-0 mb-4 w-52 mx-auto">
       <img src="{{ $image.RelPermalink }}" alt="{{ $image.Title }}" class="w-auto h-52" />
